--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     </forme>
 </section>
 <footer id="footer-copyright">
-    <div>
+    <div class="made-with-love">
         <p>CREATED WITH <img src="https://atomist.com/img/heart.png"> BY ATOMIST IN SAN FRANCISCO & BEYOND</p>
     </div>
-    <div>
+    <div class="copyright">
         <p>COPYRIGHT © 2017 ATOMIST</p>
     </div>
-    <div>
+    <div class="twitter">
         <a href="#"><img src="https://atomist.com/img/twitter.png"></a>
         <p>Follow us on Twitter</p>
     </div>
